<?xml version="1.0" encoding="utf-8"?>
<!--
	This file is part of BattleChat

    BattleChat is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.

    BattleChat is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.
-->
<resources>

    <string name="app_name">Battle Chat</string>
    <string name="service_name">Battlelog Session Service</string>

    <string-array name="update_interval_entries">
        <item>Every 5 seconds</item>
        <item>Every 10 seconds</item>
        <item>Every 17 seconds</item>
        <item>Every 25 seconds</item>
        <item>Every 30 seconds</item>
        <item>Every minute</item>
    </string-array>
    <integer-array name="update_interval_values">
        <item>5</item>
        <item>10</item>
        <item>17</item>
        <item>25</item>
        <item>30</item>
        <item>60</item>
    </integer-array>

    <string name="hello_world">Hello world!</string>
    <string name="menu_exit">Exit</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="msg_message_ok">Message sent!</string>
    <string name="msg_message_fail">Message could not be sent!</string>
    <string name="msg_chat_reload_fail">Could not reload chat. Please try to relogin.</string>
    <string name="msg_chat_num_unread">Number of new messages: %s</string>
    <string name="label_sending">Sending…</string>
    <string name="label_send">Send</string>
    <string name="msg_chat_send_message_error">You need to enter a message.</string>
    <string name="msg_chat_send_multiple_error">You\'re already sending the message!</string>
    <string name="msg_chat_load_fail">An error occurred: You can\'t chat with this user.</string>
    <string name="text_notification_title">Battle Chat status</string>
    <string name="text_notification_subtitle_ok">Signed in as %s. Tap to open.</string>
    <string name="text_notification_subtitle_fail">Session lost. Tap to login.</string>
    <string name="label_offline">Offline</string>
    <string name="label_online">Online</string>
    <string name="label_playing">Playing</string>
    <string name="msg_error_nocookie">No cookie found.</string>
    <string name="msg_no_messages">No messages found. :-(</string>
    <string name="app_email">support@ninetwozero.com</string>
    <string name="msg_no_friends">No friends found. :-(</string>
    <string name="title_settings">Settings</string>
    <string name="title_chat">Chat</string>
    <string name="title_main">Friends</string>
    <string name="msg_chat_sending_message">Sending message&#8230;</string>
    <string name="prompt_email">Origin™ Email</string>
    <string name="prompt_password">Origin™ Password</string>
    <string name="action_sign_in_register"><b>Sign in</b> or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="menu_forgot_password">Recover lost password</string>
    <string name="login_progress_signing_in">Signing in&#8230;</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="text_time_second">1 second ago</string>
    <string name="text_time_second_p">%s seconds ago</string>
    <string name="text_time_min">1 minute ago</string>
    <string name="text_time_min_p">%s minutes ago</string>
    <string name="text_time_hour">1 hour ago</string>
    <string name="text_time_hour_p">%s hours ago</string>
    <string name="text_time_day">1 day ago</string>
    <string name="text_time_day_p">%s days ago</string>
    <string name="text_time_week">1 week ago</string>
    <string name="text_time_week_p">%s weeks ago</string>
    <string name="text_time_year">1 year ago</string>
    <string name="text_time_year_p">%s years ago</string>
    <string name="menu_about">About</string>
    <string name="text_login_disclaimer">This app was not created nor is it endorsed by EA/DICE. Battlefield is a registered trademark of EA Digital Illusions CE AB. No user account information is being stored and/or shared with third-parties.</string>
    <string name="text_login_accept_terms">I accept the terms and conditions.</string>
    <string name="text_preference_notification_title">Display status notification</string>
    <string name="text_preference_notification_on">A notification will be shown.</string>
    <string name="text_preference_notification_off">No notifications will be shown.</string>
    <string name="text_preference_beep_off">You won\'t hear a thing!</string>
    <string name="text_preference_beep_on">Don\'t worry, we\'ll beep you.</string>
    <string name="text_preference_beep_title">Beep for messages</string>
    <string name="text_preference_interval_title">Chat refresh interval</string>
    <string name="text_main_loading">Getting your friends&#8230;</string>
    <string name="title_refresh">Refresh</string>
    <string name="text_chat_loading">Loading messages&#8230;</string>
    <string name="title_about">About</string>
    <string name="text_about_by">By Karl Lindmark</string>
    <string name="text_about_email">support@ninetwozero.com</string>
    <string name="text_about_version">1.0</string>
    <string name="text_chat_title">Chatting with %s</string>
    <string name="title_login">Login</string>
    <string name="msg_no_network">This app requires an active Internet connection. Make sure you\'re connected to a network (mobile/wireless network) and re-open the app.</string>

</resources>